Fixing mobile menu z-index bug + adding topsearch scaffolding

--- a/src/components/header/style.css
+++ b/src/components/header/style.css
@@ -2,7 +2,7 @@
 	height: 70px;
 	width: 100%;
 	position: absolute;
-	top: 0;
+	top: 0px;
 	background-color: #2e2f3b;
 	padding: 0px 420px 0px 420px;
 }
@@ -86,6 +86,7 @@ nav>a:last-child:hover {
 	.header > div:nth-child(3) {
 		width: 458px;
 		margin-left: calc(100% - 465px);
+		z-index: 999;
 		margin-right: 20px;
 		border-radius: 5px;
 		padding-bottom: 13px;
